--- a/emacs-config.org
+++ b/emacs-config.org
@@ -938,7 +938,7 @@ Avoid loading old bytecode instead of newer source.
    #+BEGIN_SRC emacs-lisp
      (add-hook 'git-commit-mode-hook
                (lambda ()
-                 (set-fill-column 72))
+                 (set-fill-column 72)))
    #+END_SRC
 
 *** YOLO
