--- a/emacs-config.org
+++ b/emacs-config.org
@@ -66,10 +66,6 @@ Avoid loading old bytecode instead of newer source.
 
 * Garbage Collection
 
-  #+BEGIN_SRC emacs-lisp
-    (setq gc-cons-threshold 20000000) ; 20MB
-  #+END_SRC
-
   Hide the backup files someplace special.
   #+BEGIN_SRC emacs-lisp
     (setq backup-directory-alist '(("." . "~/.emacs.d/backup"))
@@ -467,6 +463,13 @@ Avoid loading old bytecode instead of newer source.
              company-lsp-cache-candidates 'auto
              company-lsp-enable-recompletion t))
    #+END_SRC
+
+*** Performance Tune
+    Following the [[https://emacs-lsp.github.io/lsp-mode/page/performance/][lsp-mode performance guide]], I should change some settings to get better performance:
+    #+BEGIN_SRC emacs-lisp
+      (setq gc-cons-threshold (* 10 1024 1024)
+            read-process-output-max (* 1024 1024))
+    #+END_SRC
 
 ** Language support
    TODO, because there's too many...
